# ragchatbot

./: .env.example  README.md  contributing.md  pyproject.toml  requirements.txt
Embedding/test/Cosine_Similarities/: cosine_similarities.py
Embedding/test/Markdown_Query/: embedder.py  parser.py  test_pipeline.py
docs/: Ankit Resume.docx  about_rag.md  faq.md
quickrag/: __init__.py  cli.py  embedder.py  server.py  store.py
quickrag/llm/: base.py  gemini.py  ollama.py
ragbase/: store.py
ragchatbot/: __init__.py  chunker.py  cli.py  embedder.py  parser.py  server.py  store.py
ragchatbot/llm/: base.py  gemini.py  ollama.py  openai.py
tests/: test_chunker.py  test_embedder.py  test_parser.py  test_pipeline.py  test_rag.py  test_server.py  test_store.py
