[build-system]
requires = ["setuptools>=69.0"]
build-backend = "setuptools.build_meta"

[project]
name = "quickrag"
version = "0.1.0"
description = "Drop-in RAG SDK for website chatbots"
requires-python = ">=3.10"
dependencies = [
    "sentence-transformers",
    "chromadb",
    "google-genai",
    "python-dotenv",
    "requests",
    "fastapi",
    "uvicorn",
     "typer",
]

[project.optional-dependencies]
dev = [
    "matplotlib",
    "scikit-learn",
    "pytest",
]

[project.scripts]
quickrag = "quickrag.cli:main"

[tool.setuptools.packages.find]
include = ["quickrag*"]