[build-system]
requires = ["setuptools>=69.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ragchatbot"
version = "1.0.0"
readme = "README.md" 
description = "Drop-in RAG SDK for website chatbots"
requires-python = ">=3.10"
dependencies = [
    "sentence-transformers",
    "chromadb",
    "google-genai",
    "python-dotenv",
    "requests",
    "fastapi",
    "uvicorn",
    "typer",
    "pdfplumber",
    "python-docx",
]

[project.optional-dependencies]
dev = [
    "matplotlib",
    "scikit-learn",
    "pytest",
]

openai = [
    "openai",
]

[project.scripts]
ragchatbot = "ragchatbot.cli:main"

[tool.setuptools.packages.find]
include = ["ragchatbot*"]